# ScienceCamera

./: .flake8  .gitignore  FilterMotor.py  FilterWheel.py  INSTALL  LICENSE.md  Pipfile  README.md  ReleaseNotes  TelescopeServer.py  install_andor  photoAcquisitionGUI.py  pyproject.toml  pyproject_disabled.toml  requirements.txt  setup.py  uninstall_andor
TelescopePi/: FilterWheel.py  README.md  TelescopeServer.py
doc/: ShamrockSDK.chm
etc/: AndorCam.hex  AndorCam.img  AperS.cof  AperS.rbf  BBB.txt  BV.txt  C01.txt  C02.txt  Clara95.TXT  Clara97.TXT  DetectorTemplate.ini  EX.txt  FI.txt  InGaAs.TXT  InGaAs2.TXT  M1_SurCam.TXT  M1_master.TXT  Master4240.txt  Mster.txt  P01B12_4C.txt  P01B12_4D.txt  P01B201_2E.txt  P01B201_3A.txt  P01B60_2A.txt  P01B60_2B.txt  P01B60_2C.txt  P01B60_2E.txt  P01B60_3A.txt  P01B87_2B.txt  P01B87_2E.txt  P01B87_3A.txt  P01B88_1C.TXT  P01B97_1C.txt  P01B97_2E.txt  P01E03A_3P.txt  P01E03A_4P.txt  P01E30A_3P.txt  P01E30A_4P.txt  P01F2400_4K.txt  P01F28_2M.txt  (+294 more)
evora-gui/: main.qml
filter/: FilterMotor.py  JoeMotor.py  fw_io.py  fw_server.py  fw_server.py~  nohup.out
gui/: #evora_server.py#  #evora_server.pyc#  AddLinearSpacer.py  EnhancedStatusBar.py  MyLogger.py  acquisitionClasses.py  acquisition_classes.py  add_linear_spacer.py  andor.py  bash_run.sh  bash_run.sh~  changes.txt  controlClasses.py  control_classes.py  crash_report.sh  enhanced_status_bar.py  evora_ftp_server.py  evora_server.py  evora_server.py~  evora_server_link  evora_test_client.py  example.fit  filters.txt  fits_utils.py  gui_elements.py  logClasses.py  log_utils.py  (+17 more)
(+146 files in other folders)
