[tool.poetry]
name = "evora"
version = "1.0.0"
description = "Software for controlling the Manastash Ridge Observatory telescope."
authors = ["Your Name <you@example.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^2.7"
pandas = "^1.1.2"
astropy = "^4.0.1"
twisted = "^20.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.5.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
