# This is for the new GUI, which uses Qt/Python3, please see the wiki for setting up the server
[tool.poetry]
name = "evora"
version = "1.0.0"
description = "Software for controlling the Manastash Ridge Observatory telescope."
authors = ["Your Name <you@example.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8,<3.9"
pyside2 = "^5.15.1"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
